United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7003125 precompiled.hpp is included when precompiled headers are not used
7003125 : precompiled.hpp is included when precompiled headers are not used

Details
Type:
Bug
Submit Date:
2010-11-29
Status:
Closed
Updated Date:
2011-04-23
Project Name:
JDK
Resolved Date:
2011-04-23
Component:
hotspot
OS:
generic
Sub-Component:
build
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
Including precompiled.hpp is unnecessary when not compiling with precompiled headers.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/c760f78e0a53
                                     
2010-12-25
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/c760f78e0a53
                                     
2010-12-10
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/c760f78e0a53
                                     
2010-12-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/c760f78e0a53
                                     
2010-12-03
SUGGESTED FIX

* ifdef away the includes in precompiled.hpp when precompiled headers are not used.
* Fix all include dependencies that break when precompiled.hpp is emptied.
                                     
2010-11-29



Hardware and Software, Engineered to Work Together