hotspot/src/share/vm/precompiled.hpp
@@ -22,6 +22,10 @@
  *
  */
 
+// Precompiled headers are turned off for Sun Studion,
+// or if the user passes USE_PRECOMPILED_HEADER=0 to the makefiles.
+#ifndef DONT_USE_PRECOMPILED_HEADER
+
 # include "asm/assembler.hpp"
 # include "asm/assembler.inline.hpp"
 # include "asm/codeBuffer.hpp"
@@ -323,3 +327,5 @@
 # include "gc_implementation/shared/gcAdaptivePolicyCounters.hpp"
 # include "gc_implementation/shared/gcPolicyCounters.hpp"
 #endif // SERIALGC
+
+#endif // !DONT_USE_PRECOMPILED_HEADER
