hotspot/src/share/vm/prims/jvmtiImpl.hpp
@@ -26,6 +26,7 @@
 #define SHARE_VM_PRIMS_JVMTIIMPL_HPP
 
 #ifndef JVMTI_KERNEL
+
 #include "classfile/systemDictionary.hpp"
 #include "jvmtifiles/jvmti.h"
 #include "oops/objArrayOop.hpp"
@@ -35,7 +36,6 @@
 #include "prims/jvmtiUtil.hpp"
 #include "runtime/stackValueCollection.hpp"
 #include "runtime/vm_operations.hpp"
-#endif
 
 //
 // Forward Declarations
@@ -416,6 +416,8 @@ public:
 
   static void print();
 };
+
+#endif // !JVMTI_KERNEL
 
 // Utility macro that checks for NULL pointers:
 #define NULL_CHECK(X, Y) if ((X) == NULL) { return (Y); }
